feat: 串联目标下载器与添加状态
